Switch to border-box to avoid overflow

--- a/packages/block-library/src/gallery/style.scss
+++ b/packages/block-library/src/gallery/style.scss
@@ -58,6 +58,7 @@
 			position: absolute;
 			text-align: center;
 			width: 100%;
+			box-sizing: border-box;
 
 			img {
 				display: inline;
